# DataLogger

./: .gitignore  CMakeLists.txt  README.md
components/button/: CMakeLists.txt  button.c  button.h
components/dht11/: CMakeLists.txt  dht11.h  dht11_task.c  dht11_task.cpp  dht11_task.h  dht11_task.hpp
components/irdecoder/: CMakeLists.txt  irdecoder.c  irdecoder.h
components/lcd/: CMakeLists.txt  lcd_i2c.c  lcd_i2c.h  lcd_task.c  lcd_task.h
components/speaker/: CMakeLists.txt  audio_data.h  audio_data_generator.py  speaker_driver.c  speaker_driver.h
components/statusled/: statusled.c  statusled.h
components/timeset/: CMakeLists.txt  timeset.c  timeset.h
components/webserver/: CMakeLists.txt  index.html  style.css  webserver.c  webserver.h
components/wifi/: wifi.c  wifi.h
main/: CMakeLists.txt  dht11.c  dht11.h  dht11_task.c  dht11_task.h  lcd_i2c.c  lcd_i2c.h  lcd_task.c  main.c  webserver.c  webserver.h  wifi.c  wifi.h
main/button/: button.c  button.h
main/dht11/: dht11.c  dht11.h  dht11_task.c  dht11_task.h
main/irdecoder/: irdecoder.c  irdecoder.h
main/lcd/: lcd_i2c.c  lcd_i2c.h  lcd_task.c  lcd_task.h
main/speaker/: audio_data.h  audio_data_generator.py  speaker_driver.c  speaker_driver.h
main/statusled/: statusled.c  statusled.h
main/timeset/: timeset.c  timeset.h
main/webserver/: index.html  script.js  style.css  webserver.c
main/wifi/: wifi.c  wifi.h
